// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepsTree /> tests snapshot test 1`] = `
<div>
  <ul
    class="root"
  >
    <li
      class="item"
      data-type="item"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main name"
          style="--text-line-clamp: 1;"
        >
          Step 1
        </p>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          9m 11s
        </span>
      </div>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main name"
            style="--text-line-clamp: 1;"
          >
            Step 2
          </p>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          9m 29s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Success
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              12m 59s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Running
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              14m 17s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Failed
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              2m 1s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="expired"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="expired"
            >
              <svg
                height="16"
                viewBox="0 0 14 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.831 2.305h-.885v3.683H3.53v.885h3.301V2.305z"
                />
                <path
                  d="M12.54 7.466a6.322 6.322 0 10-5.074 5.073 3.627 3.627 0 105.073-5.073zm-6.218 4.293a5.437 5.437 0 115.437-5.437 5.51 5.51 0 01-.039.676 3.624 3.624 0 00-4.722 4.722c-.224.027-.45.04-.676.039zm4.046 1.351a2.742 2.742 0 11-.002-5.484 2.742 2.742 0 01.004 5.484h-.002z"
                />
                <path
                  d="M10.813 8.469h-.886v2.767h.886V8.469zM10.813 11.566h-.886v.849h.886v-.849z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Expired
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              5m 2s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="aborted"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="banned"
            >
              <svg
                height="16"
                viewBox="0 0 14 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13a6.5 6.5 0 11.008-13A6.5 6.5 0 016.5 13zm0-11.784a5.285 5.285 0 10.008 10.569A5.285 5.285 0 006.5 1.215z"
                />
                <path
                  d="M10.24 1.9l-8.338 8.338.86.86 8.337-8.338-.86-.86z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Aborted
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              2m 14s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="suspended"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="banned"
            >
              <svg
                height="16"
                viewBox="0 0 14 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13a6.5 6.5 0 11.008-13A6.5 6.5 0 016.5 13zm0-11.784a5.285 5.285 0 10.008 10.569A5.285 5.285 0 006.5 1.215z"
                />
                <path
                  d="M10.24 1.9l-8.338 8.338.86.86 8.337-8.338-.86-.86z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Suspended
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              7m 2s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="queued"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="queued"
            >
              <svg
                height="16"
                viewBox="0 0 14 11"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.364 0H.636A.636.636 0 000 .636v3.819a.636.636 0 00.636.636h12.728A.636.636 0 0014 4.455V.636A.636.636 0 0013.364 0zm-.637 3.818H1.273V1.273h11.454v2.545zM13.364 6.363H.636a.636.636 0 000 1.273h12.728a.636.636 0 100-1.273zM13.364 8.91H.636a.636.636 0 100 1.273h12.728a.636.636 0 000-1.273z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Queued
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 38s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="notstarted"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="pending"
            >
              <svg
                height="16"
                viewBox="0 0 9 9"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.206 2.709a.404.404 0 01-.215.057.443.443 0 01-.343-.186c-.13-.215-.287-.402-.445-.588a.39.39 0 01.015-.559.39.39 0 01.558.014c.201.215.387.459.545.717a.38.38 0 01-.115.545zM5.987 7.868A3.705 3.705 0 007.45 6.72a.392.392 0 01.56-.071.392.392 0 01.07.559 4.62 4.62 0 01-1.776 1.404c-.058.029-.1.029-.158.029a.402.402 0 01-.373-.244.411.411 0 01.215-.53zM8.078 5.403c.13-.473.143-.974.086-1.447a.39.39 0 01.344-.445.39.39 0 01.444.344 4.317 4.317 0 01-.1 1.763.396.396 0 01-.387.301c-.029 0-.072 0-.1-.014a.42.42 0 01-.287-.502zM5.748.858A.387.387 0 116.491.64a.387.387 0 01-.743.217zM4.525 0a.4.4 0 110 .803A3.706 3.706 0 00.827 4.5c0 .387.057.774.186 1.16a.391.391 0 01-.258.502c-.043.015-.086.015-.129.015-.172 0-.33-.1-.372-.273A4.305 4.305 0 01.024 4.5c0-2.48 2.021-4.5 4.5-4.5zM1.802 6.994a3.724 3.724 0 002.723 1.204.4.4 0 110 .802 4.494 4.494 0 01-3.311-1.462.39.39 0 01.029-.559c.157-.157.4-.143.559.015z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Not Started
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              7m 6s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="paused"
          >
            <span
              class="bp3-icon bp3-icon-pause StyledProps--main icon"
              icon="pause"
            >
              <svg
                data-icon="pause"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  pause
                </desc>
                <path
                  d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Paused
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              5m 23s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="waiting"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Waiting
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              8m 21s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="skipped"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="skipped"
            >
              <svg
                height="16"
                viewBox="0 0 16 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.25 8.543H.746A.75.75 0 000 9.289v2.521a.75.75 0 00.746.746h2.521a.75.75 0 00.746-.746V9.29a.778.778 0 00-.763-.746zM15.236 8.543h-2.504a.75.75 0 00-.745.746v2.521a.75.75 0 00.745.746h2.522A.75.75 0 0016 11.81V9.29a.778.778 0 00-.764-.746zM9.252 8.543H6.73a.75.75 0 00-.746.746v2.521a.75.75 0 00.746.746h2.522a.75.75 0 00.746-.746V9.29c-.018-.409-.338-.746-.746-.746zm0 3.25H6.73V9.27h2.522v2.522zM14.65 6.713l.888-4.333-1.598.532A7.066 7.066 0 0011.65.923 7.612 7.612 0 007.99 0C4.013 0 .781 3.019.781 6.713c0 .301.249.55.55.55.303 0 .551-.249.551-.55 0-3.09 2.735-5.612 6.11-5.612 1.9 0 3.675.817 4.83 2.166l-1.492.515 3.32 2.93z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Skipped
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              13m 12s
            </span>
          </div>
        </li>
      </ul>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main name"
            style="--text-line-clamp: 1;"
          >
            Step 3
          </p>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          6m 12s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="failed"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="circle-cross"
                >
                  <svg
                    height="16"
                    viewBox="0 0 13 13"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Failed
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="running"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="spinner"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 36 36"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                      stroke="currentColor"
                      stroke-dasharray="75,100"
                      stroke-linecap="round"
                      stroke-width="2.8"
                      style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Running
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="group"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="nameWrapper"
                >
                  <div
                    class="groupIcon"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main name"
                    style="--text-line-clamp: 1;"
                  >
                    Step 3_7
                  </p>
                </div>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  6m 12s
                </span>
              </div>
              <ul
                class="root"
              >
                <li
                  class="item"
                  data-type="item"
                >
                  <div
                    class="step"
                    data-status="success"
                  >
                    <span
                      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                      icon="tick-circle"
                    >
                      <svg
                        data-icon="tick-circle"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          tick-circle
                        </desc>
                        <path
                          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main name"
                      style="--text-line-clamp: 1;"
                    >
                      Success
                    </p>
                    <span
                      class="StyledProps--font StyledProps--main duration StyledProps--inline"
                    >
                       
                      13m 20s
                    </span>
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="running"
      >
        <span
          class="bp3-icon StyledProps--main icon"
          data-icon="spinner"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 36 36"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
              stroke="currentColor"
              stroke-dasharray="75,100"
              stroke-linecap="round"
              stroke-width="2.8"
              style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <span>
            No valid template with id "stepGroup" found in any namespace
          </span>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          8m 36s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="group"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                  stroke="currentColor"
                  stroke-dasharray="75,100"
                  stroke-linecap="round"
                  stroke-width="2.8"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="groupIcon"
              />
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main name"
                style="--text-line-clamp: 1;"
              >
                Step 4
              </p>
            </div>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              14m 58s
            </span>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  a very long name for no reason
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  1m 52s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="notstarted"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="pending"
                >
                  <svg
                    height="16"
                    viewBox="0 0 9 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.206 2.709a.404.404 0 01-.215.057.443.443 0 01-.343-.186c-.13-.215-.287-.402-.445-.588a.39.39 0 01.015-.559.39.39 0 01.558.014c.201.215.387.459.545.717a.38.38 0 01-.115.545zM5.987 7.868A3.705 3.705 0 007.45 6.72a.392.392 0 01.56-.071.392.392 0 01.07.559 4.62 4.62 0 01-1.776 1.404c-.058.029-.1.029-.158.029a.402.402 0 01-.373-.244.411.411 0 01.215-.53zM8.078 5.403c.13-.473.143-.974.086-1.447a.39.39 0 01.344-.445.39.39 0 01.444.344 4.317 4.317 0 01-.1 1.763.396.396 0 01-.387.301c-.029 0-.072 0-.1-.014a.42.42 0 01-.287-.502zM5.748.858A.387.387 0 116.491.64a.387.387 0 01-.743.217zM4.525 0a.4.4 0 110 .803A3.706 3.706 0 00.827 4.5c0 .387.057.774.186 1.16a.391.391 0 01-.258.502c-.043.015-.086.015-.129.015-.172 0-.33-.1-.372-.273A4.305 4.305 0 01.024 4.5c0-2.48 2.021-4.5 4.5-4.5zM1.802 6.994a3.724 3.724 0 002.723 1.204.4.4 0 110 .802 4.494 4.494 0 01-3.311-1.462.39.39 0 01.029-.559c.157-.157.4-.143.559.015z"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  step_4_1_2
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  12m 32s
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<StepsTree /> tests works for retry steps 1`] = `
<div>
  <ul
    class="root"
  >
    <li
      class="item"
      data-type="retry-item"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main name"
          style="--text-line-clamp: 1;"
        >
          Step 1
        </p>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
